Add funcionality to blog-content-service